syntax = "proto2";

package com.scalableminds.webknossos.tracingstore;


message Point3D {
    required int32 x = 1;
    required int32 y = 2;
    required int32 z = 3;
}

message Vector3D {
    required double x = 1;
    required double y = 2;
    required double z = 3;
}

message Color {
  required double r = 1;
  required double g = 2;
  required double b = 3;
  required double a = 4;
}

message BoundingBox {
    required Point3D topLeft = 1;
    required int32 width = 2;
    required int32 height = 3;
    required int32 depth = 4;
}

message NamedBoundingBox {
  required int32 id = 1; // Zero shouldn't be used as an id because it's reserved for the original user bounding box
  optional string name = 2;
  optional bool isVisible = 3;
  optional Color color = 4;
  required BoundingBox boundingBox = 5;
}
